k8s/app/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-frontend
  labels:
    app: url-shortener-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: url-shortener-frontend
  template:
    metadata:
      labels:
        app: url-shortener-frontend
    spec:
      containers:
        - name: url-shortener-frontend
          image: cloudwithpreetham/url-shortener:frontend-latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
