k8s/app/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-frontend-service
spec:
  selector:
    app: url-shortener-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
