k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener-ingress
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - url-shortener.local
      secretName: url-shortener-tls-secret
  rules:
    - host: url-shortener.local
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: url-shortener-frontend-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: url-shortener-service
                port:
                  number: 80
